# tidal-wave

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILDME.md  Dockerfile  Dockerfile-distroless  HTTP2_Compatibility.ipynb  README.md  experimentation.ipynb  pyinstall.py  pyinstaller.py  pyproject.toml  release_artifacts.sh  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: docker-image.yml  pyapp-linux.yml  pyapp-macos.yml  pyapp-macos_arm64.yml  pyapp-macos_x86.yml  pyapp-windows.yml  pyinstaller-linux.yml  pyinstaller-macos.yml  pyinstaller-macos_arm64.yml  pyinstaller-macos_x86.yml  pyinstaller-windows.yml  python-app.yml  python-build.yml  python-lint.yml
tidal_wave/: __init__.py  __main__.py  album.py  artist.py  dash.py  hls.py  login.py  main.py  media.py  metadata.py  mix.py  models.py  oauth.py  oauth2.py  playlist.py  playlists.py  requesting.py  signin.py  tokens.ipynb  track.py  utils.py  video.py
tidal_wave/models/: __init__.py
tidal_wave/models/json_response/: __init__.py  albums.py  artists.py  videos.py
