[build-system]
requires = ["setuptools", "wheel"]
[bdist_wheel]
universal = 0  # Make the generated wheels have "py3" tag
[project]
name = "tidal-wave"
dynamic = ["version"]
description = "A tool to wave at the TIDAL music service."
authors = [{ name = "colinho", email = "pypi@colin.technology" }]
maintainers = [{ name = "colinho", email = "pypi@colin.technology" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8,<3.13"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "backoff==2.2.1",
    "cachecontrol==0.14.0",
    "dataclass-wizard==0.22.3",
    "ffmpeg-python==0.2.0",
    "mutagen==1.47.0",
    "m3u8==6.0.0",
    "platformdirs==4.2.2",
    "pycryptodome==3.20.0",
    "requests[socks]==2.32.3",
    "typer==0.12.5",
]
[project.scripts]
tidal-wave = "tidal_wave.main:app"
[project.urls]
Homepage = "https://github.com/ebb-earl-co/tidal-wave"

[tool.ruff]
target-version = "py38"

[tool.setuptools.dynamic]
version = {attr = "tidal_wave.main.__version__"}

[tool.uv]
dev-dependencies = [
    "pyinstaller==6.7.0",
    "ruff"
]
